objects/FLODocs__Test_Class_SObject_Dependency__mdt.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Field_API_Name__c</fullName>
        <description>API name of the field</description>
        <inlineHelpText>API name of the field</inlineHelpText>
        <label>Field API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Is_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if this field is a lookup to another object.</description>
        <inlineHelpText>True if this field is a lookup to another object.</inlineHelpText>
        <label>Is Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_SObject_API__c</fullName>
        <description>The API name of the field&apos;s parent object.</description>
        <inlineHelpText>The API name of the field&apos;s parent object.</inlineHelpText>
        <label>Parent SObject API</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Value__c</fullName>
        <description>Value of the field if it&apos;s not a reference.
SObject API name if it is a reference.</description>
        <inlineHelpText>Value of the field if it&apos;s not a reference.
SObject API name if it is a reference.</inlineHelpText>
        <label>Value</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Test Class SObject Dependency</label>
    <pluralLabel>Test Class SObject Dependencies</pluralLabel>
</CustomObject>